--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
     "@ng-bootstrap/ng-bootstrap": "5.0.0-rc.1",
+    "bootstrap": "^4.3.1",
     "core-js": "3.1.4",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
@@ -44,6 +45,6 @@
     "protractor": "5.4.2",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
-    "typescript": "3.5.2"
+    "typescript": "3.4.5"
   }
 }
