--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "5.0.0-rc.1",
     "bootstrap": "^4.3.1",
     "core-js": "3.1.4",
+    "jquery": "3.4.1",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
     "zone.js": "0.9.1"
