--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "8.1.2",
     "@angular/router": "8.1.2",
     "@ng-bootstrap/ng-bootstrap": "5.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "core-js": "3.1.4",
     "jquery": "3.4.1",
     "rxjs": "6.5.2",
