--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "5.1.0",
     "bootstrap": "4.3.1",
     "core-js": "3.1.4",
-    "font-awesome": "^4.7.0",
+    "font-awesome": "4.7.0",
     "jquery": "3.4.1",
     "rxjs": "6.5.2",
     "tslib": "1.10.0",
