--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/theme.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.min.css"
             ],
