--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.1.2",
+    "@angular/cdk": "8.1.1",
     "@angular/common": "8.1.2",
     "@angular/compiler": "8.1.2",
     "@angular/core": "8.1.2",
     "@angular/forms": "8.1.2",
+    "@angular/material": "8.1.1",
     "@angular/platform-browser": "8.1.2",
     "@angular/platform-browser-dynamic": "8.1.2",
     "@angular/router": "8.1.2",
@@ -34,7 +36,7 @@
     "@angular/compiler-cli": "8.1.2",
     "@angular/language-service": "8.1.2",
     "@types/node": "12.6.8",
-    "@types/jasmine": "3.3.14",
+    "@types/jasmine": "3.3.15",
     "@types/jasminewd2": "2.0.6",
     "codelyzer": "5.1.0",
     "jasmine-core": "3.4.0",
